--- a/EmpInfo/Views/Apply/CheckUCApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckUCApply.cshtml
@@ -104,6 +104,10 @@
                         <td>@uc.delivery_company</td>
                     </tr>
                     <tr>
+                        <th>送货地址</th>
+                        <td>@uc.delivery_addr</td>
+                    </tr>
+                    <tr>
                         <th>申请原因</th>
                         <td>@uc.reason</td>
                     </tr>
