--- a/EmpInfo/Views/ApplyExtra/ManageITItems.cshtml
+++ b/EmpInfo/Views/ApplyExtra/ManageITItems.cshtml
@@ -131,6 +131,7 @@
                             <option value="软件安装">软件安装</option>
                             <option value="系统与权限">系统与权限</option>
                             <option value="硬件故障">硬件故障</option>
+                            <option value="新设备申请">新设备申请</option>
                             <option value="其它">其它</option>
                         </select>
                         <input type="text" class="form-control" name="item_name" placeholder="项目名称" style="margin-top:4px;" />
