--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -158,46 +158,12 @@
         //工资查询入口
         $("#SalaryImg,#SalaryBt").click(function () {
             //2018-10-11 不再提供查询服务
-            toastr.info("接上级通知，不再提供工资查询服务");
-            return;
+            //toastr.info("接上级通知，不再提供工资查询服务");
+            //return;
 
-            @*$.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
-                if (!data.suc) {
-                    toastr.error(data.msg);
-                } else {
-                    $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
-                        if (data.suc) {
-                            if (checkSalaryNeedPassword == "1") {
-                                openConfirmPasswordDialog(function (data) {
-                                    window.location.href = "@Url.Content("~/Home/CheckSalary")";
-                                });
-                            } else {
-                                window.location.href = "@Url.Content("~/Home/CheckSalary")";
-                            }
-                        } else {
-                            toastr.error(data.msg);
-                        }
-                    });
-                }
-            });*@
+            //2020-3-30 接行政部通知，重新开通工资查询服务
+            window.location.href = "@Url.Content("~/Home/CheckSalary")";
         });
-
-        //K3重置密码
-        @*$("#K3Img,#K3Bt").click(function () {
-            $.post("@Url.Content("~/Home/ValidateEmail")", {}, function (data) {
-                if (!data.suc) {
-                    toastr.error(data.msg);
-                } else {
-                    $.post("@Url.Content("~/Home/ValidatePhone")", {}, function (data) {
-                        if (data.suc) {
-                            window.location.href = "@Url.Content("~/K3/AccountReset")";
-                        } else {
-                            toastr.error(data.msg);
-                        }
-                    });
-                }
-            });
-        });*@
 
         //图形报表
         $("#chartBt,#chartImg").click(function () {
@@ -287,14 +253,6 @@
         </div>
     </div>
     }
-    @*<div class="col-xs-6 col-sm-4">
-        <div class="thumbnail">
-            <a href="#" id="K3Img"><img src="@Url.Content("~/Content/images/box.png")" alt="k3" ></a>
-            <div class="caption">
-                <h3>K3用户</h3>
-            </div>
-        </div>
-    </div>*@
     @if (!auditorComing) {
     <div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
@@ -349,15 +307,16 @@
             </div>
         </div>
     }
-    @*<div class="col-xs-6 col-sm-4">
+
+    <div class="col-xs-6 col-sm-4">
         <div class="thumbnail">
             <a href="#" id="SalaryImg"><img src="@Url.Content("~/Content/images/salary.png")" alt="salary"></a>
             <div class="caption">
-                <h3>个人工资</h3>
+                <h3>计件工资</h3>
             </div>
         </div>
-    </div>*@
-    if (auts.IndexOf("ModuelTest") >= 0) { 
+    </div>
+    if (auts.IndexOf("ModuelTest") >= 0) {
         <div class="col-xs-6 col-sm-4">
             <div class="thumbnail">
                 <a href="@Url.Content("~/Home/EditPublicFundInfo")"><img src="@Url.Content("~/Content/images/public_fund.png")" alt="public_fund"></a>
