--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -78,7 +78,7 @@
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=JQ")">
                     <img src="@Url.Content("~/Content/images/quit.png")" alt="员工辞职/自离申请" class="center-block" />
-                    <p class="text-center">员工辞职/自离申请</p>
+                    <p class="text-center">员工辞职/自离</p>
                 </a>
             </div>
             @*<div class="col-xs-4 col-sm-3 col-md-2">
